--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <nav>
                 <a href="#quienes-somos">Quienes Somos</a>
                 <a href="#nuestros-programas">Nuestros Programas</a>
-                <a href="#caracteristicas">Características</a>
+                <a href="#caracteristicas">Característicass</a>
             </nav>
         </div>
     </header>
