--- a/Inicio_menu.html
+++ b/Inicio_menu.html
@@ -25,15 +25,53 @@
     <section>
         <nav class="sect">
             <article>
-                
+                <section>
+                    <h2>Comida</h2>
+                </section>
             </article>
         </nav>
-        <nav class="sect"></nav>
-        <nav class="sect"></nav>
-        <nav class="sect"></nav>
-        <nav class="sect"></nav>
-        <nav class="sect"></nav>
-        <nav class="sect"></nav>
+        <nav class="sect">
+            <article>
+                <section>
+                    <h2>Belleza</h2>
+                </section>
+            </article>
+        </nav>
+        <nav class="sect">
+            <article>
+                <section>
+                    <h2>Salud</h2>
+                </section>
+            </article>
+        </nav>
+        <nav class="sect">
+            <article>
+                <section>
+                    <h2>Salud</h2>
+                </section>
+            </article>
+        </nav>
+        <nav class="sect">
+            <article>
+                <section>
+                    <h2>Things</h2>
+                </section>
+            </article>
+        </nav>
+        <nav class="sect">
+            <article>
+                <section>
+                    <h2>Destacados</h2>
+                </section>
+            </article>
+        </nav>
+        <nav class="sect">
+            <article>
+                <section>
+                    <h2>¿Cómo funciona?</h2>
+                </section>
+            </article>
+        </nav>
     </section>
 </body>
 </html>
