--- a/Inicio_menu.html
+++ b/Inicio_menu.html
@@ -29,6 +29,11 @@
                     <h2>Comida</h2>
                 </section>
             </article>
+            <article>
+                <div></div>
+                <div></div>
+                <div></div>
+            </article>
         </nav>
         <nav class="sect">
             <article>
@@ -36,12 +41,10 @@
                     <h2>Belleza</h2>
                 </section>
             </article>
-        </nav>
-        <nav class="sect">
             <article>
-                <section>
-                    <h2>Salud</h2>
-                </section>
+                <div></div>
+                <div></div>
+                <div></div>
             </article>
         </nav>
         <nav class="sect">
@@ -49,6 +52,23 @@
                 <section>
                     <h2>Salud</h2>
                 </section>
+            </article>
+            <article>
+                <div></div>
+                <div></div>
+                <div></div>
+            </article>
+        </nav>
+        <nav class="sect">
+            <article>
+                <section>
+                    <h2>Salud</h2>
+                </section>
+            </article>
+            <article>
+                <div></div>
+                <div></div>
+                <div></div>
             </article>
         </nav>
         <nav class="sect">
@@ -57,6 +77,11 @@
                     <h2>Things</h2>
                 </section>
             </article>
+            <article>
+                <div></div>
+                <div></div>
+                <div></div>
+            </article>
         </nav>
         <nav class="sect">
             <article>
@@ -64,12 +89,22 @@
                     <h2>Destacados</h2>
                 </section>
             </article>
+            <article>
+                <div></div>
+                <div></div>
+                <div></div>
+            </article>
         </nav>
         <nav class="sect">
             <article>
                 <section>
                     <h2>¿Cómo funciona?</h2>
                 </section>
+            </article>
+            <article>
+                <div></div>
+                <div></div>
+                <div></div>
             </article>
         </nav>
     </section>
