--- a/Inicio_menu.html
+++ b/Inicio_menu.html
@@ -26,11 +26,11 @@
     <section>
         <nav class="sect">
             <article class="barra">
-                <section>
+                <section class="barrita">
                     <h2>Destacados</h2>
                 </section>
             </article>
-            <article>
+            <article class="cajas">
                 <div></div>
                 <div></div>
                 <div></div>
@@ -38,11 +38,11 @@
         </nav>
         <nav class="sect">
             <article class="barra">
-                <section>
+                <section class="barrita">
                     <h2>Comida</h2>
                 </section>
             </article>
-            <article>
+            <article class="cajas">
                 <div></div>
                 <div></div>
                 <div></div>
@@ -50,11 +50,11 @@
         </nav>
         <nav class="sect">
             <article class="barra">
-                <section>
+                <section class="barrita">
                     <h2>Viajes</h2>
                 </section>
             </article>
-            <article>
+            <article class="cajas">
                 <div></div>
                 <div></div>
                 <div></div>
@@ -62,11 +62,11 @@
         </nav>
         <nav class="sect">
             <article class="barra">
-                <section>
+                <section class="barrita">
                     <h2>Belleza</h2>
                 </section>
             </article>
-            <article>
+            <article class="cajas">
                 <div></div>
                 <div></div>
                 <div></div>
@@ -74,11 +74,11 @@
         </nav>
         <nav class="sect">
             <article class="barra">
-                <section>
+                <section class="barrita">
                     <h2>Salud</h2>
                 </section>
             </article>
-            <article>
+            <article class="cajas">
                 <div></div>
                 <div></div>
                 <div></div>
@@ -86,11 +86,11 @@
         </nav>
         <nav class="sect">
             <article class="barra">
-                <section >
+                <section class="barrita">
                     <h2>Things</h2>
                 </section>
             </article>
-            <article>
+            <article class="cajas">
                 <div></div>
                 <div></div>
                 <div></div>
@@ -98,7 +98,7 @@
         </nav>
         <nav class="sect">
             <article class="barra">
-                <section>
+                <section class="barrita">
                     <h2>¿Cómo funciona?</h2>
                 </section>
             </article>
