--- a/Inicio_menu - copia.html
+++ b/Inicio_menu - copia.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/inicio_style.css">
+    <link rel="stylesheet" href="./css/Intento.css">
     <title>Document</title>
 </head>
 <body>
-    <header class="container">
-            <img src="./img/Logo.jpg" alt="Logo" id="logo">
+    <header>
+        <div class="container">
+            <p id="logo"><img src="./img/Logo.jpg" alt="Logo"></p>
             <div id="menu">
                 <ul id="items">
                     <li><a href="#">Comida</a></li>
@@ -20,13 +21,19 @@
                     <li><a href="#">¿Cómo funciona?</a></li>
                 </ul>
             </div>
+        </div>   
     </header>
     <section>
         <nav class="sect">
-            <article class="cont">
-                <div class="caja"></div>
-                <div class="caja"></div>
-                <div class="caja"></div>
+            <article class="barra">
+                <section class="barrita">
+                    <h2>Destacados</h2>
+                </section>
+            </article>
+            <article class="cajas">
+                <div></div>
+                <div></div>
+                <div></div>
             </article>
         </nav>
         <nav class="sect">
@@ -35,10 +42,10 @@
                     <h2>Comida</h2>
                 </section>
             </article>
-            <article class="cont">
-                <div class="caja"></div>
-                <div class="caja"></div>
-                <div class="caja"></div>
+            <article class="cajas">
+                <div></div>
+                <div></div>
+                <div></div>
             </article>
         </nav>
         <nav class="sect">
@@ -47,10 +54,10 @@
                     <h2>Viajes</h2>
                 </section>
             </article>
-            <article class="cont">
-                <div class="caja"></div>
-                <div class="caja"></div>
-                <div class="caja"></div>
+            <article class="cajas">
+                <div></div>
+                <div></div>
+                <div></div>
             </article>
         </nav>
         <nav class="sect">
@@ -59,10 +66,10 @@
                     <h2>Belleza</h2>
                 </section>
             </article>
-            <article class="cont">
-                <div class="caja"></div>
-                <div class="caja"></div>
-                <div class="caja"></div>
+            <article class="cajas">
+                <div></div>
+                <div></div>
+                <div></div>
             </article>
         </nav>
         <nav class="sect">
@@ -71,10 +78,10 @@
                     <h2>Salud</h2>
                 </section>
             </article>
-            <article class="cont">
-                <div class="caja"></div>
-                <div class="caja"></div>
-                <div class="caja"></div>
+            <article class="cajas">
+                <div></div>
+                <div></div>
+                <div></div>
             </article>
         </nav>
         <nav class="sect">
@@ -83,10 +90,10 @@
                     <h2>Things</h2>
                 </section>
             </article>
-            <article class="cont">
-                <div class="caja"></div>
-                <div class="caja"></div>
-                <div class="caja"></div>
+            <article class="cajas">
+                <div></div>
+                <div></div>
+                <div></div>
             </article>
         </nav>
                <nav class="sect">
