--- a/Inicio_menu.html
+++ b/Inicio_menu.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/inicio_style.css">
-    <title>Document</title>
+    <title>Cupon Mania</title>
 </head>
 <body>
     <header class="container">
@@ -92,7 +92,7 @@
                <nav class="sect">
             <article class="barra">
                 <section class="barrita">
-                    <h2>¿Cómo funciona?</h2>
+                    <h2><a href="howworks.html">¿Cómo funciona?</a></h2>
                 </section>
             </article>
     </section>
