--- a/Inicio_menu.html
+++ b/Inicio_menu.html
@@ -17,7 +17,7 @@
                     <li><a href="#">Salud</a></li>
                     <li><a href="#">Things</a></li>
                     <li><a href="#">Destacados</a></li>
-                    <li><a href="#">¿Cómo funciona?</a></li>
+                    <li><a href="howworks.html">¿Cómo funciona?</a></li>
                 </ul>
             </div>
     </header>
