--- a/howworks.html
+++ b/howworks.html
@@ -4,9 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/inicio_style.css">
+    <link rel="icon" href="img/logo.png" type="image/x-icon">
     <title>Cupon Mania</title>
 </head>
 <body>
-    
+    <header class="container">
+        <img src="./img/Logo.jpg" alt="Logo" id="logo">
+        <div id="menu">
+            <ul id="items">
+                <li><a href="#">Comida</a></li>
+                <li><a href="#">Belleza</a></li>
+                <li><a href="#">Viajes</a></li>
+                <li><a href="#">Salud</a></li>
+                <li><a href="#">Things</a></li>
+                <li><a href="#">Destacados</a></li>
+                <li><a href="howworks.html">¿Cómo funciona?</a></li>
+            </ul>
+        </div>
+    </header>
+
 </body>
 </html>
