--- a/howworks.html
+++ b/howworks.html
@@ -22,6 +22,11 @@
             </ul>
         </div>
     </header>
+    <article>
+        <section>
+            <div class=""></div>
+        </section>
+    </article>
 
 </body>
 </html>
