--- a/Inicio_menu - copia.html
+++ b/Inicio_menu - copia.html
@@ -7,98 +7,92 @@
     <title>Document</title>
 </head>
 <body>
-    <header>
-        <div class="container">
-            <p id="logo"><img src="./img/Logo.jpg" alt="Logo"></p>
+    <header class="container">
+            <img src="./img/Logo.jpg" alt="Logo" id="logo">
             <div id="menu">
                 <ul id="items">
-                    <li><a href="#">Comida</a></li>
-                    <li><a href="#">Belleza</a></li>
-                    <li><a href="#">Viajes</a></li>
-                    <li><a href="#">Salud</a></li>
-                    <li><a href="#">Things</a></li>
-                    <li><a href="#">Destacados</a></li>
-                    <li><a href="#">¿Cómo funciona?</a></li>
+                    <li><img src="./img/iconos/comida.png" alt="Comida" height="20px"><a href="#Comida">Comida</a></li>
+                    <li><img src="./img/iconos/belleza.png" alt="Belleza" height="20px"><a href="#Belleza">Belleza</a></li>
+                    <li><img src="./img/iconos/viajes.png" alt="Viajes" height="20px"><a href="#Viajes">Viajes</a></li>
+                    <li><img src="./img/iconos/salud.png" alt="Salud" height="20px"><a href="#Salud">Salud</a></li>
+                    <li><img src="./img/iconos/things.png" alt="Things" height="20px"><a href="#Things">Things</a></li>
+                    <li><img src="./img/iconos/como-funciona.png" alt="Help" height="20px"><a href="#Help">¿Cómo funciona?</a></li>
+                    <div id="Busqueda"><img src="./img/iconos/lupa.png" alt="Busqueda" height="20px"><a href="#">Busqueda</a></div>
+                    <li><img src="./img/iconos/iniciar-sesion.png" alt="Resgistrarse" height="20px"><a href="#">Resgistrarse</a></li>
                 </ul>
             </div>
-        </div>   
     </header>
     <section>
         <nav class="sect">
-            <article class="barra">
-                <section class="barrita">
-                    <h2>Destacados</h2>
-                </section>
-            </article>
-            <article class="cajas">
-                <div></div>
-                <div></div>
-                <div></div>
+            <article class="cont">
+                <div class="caja"></div>
+                <div class="caja"></div>
+                <div class="caja"></div>
             </article>
         </nav>
         <nav class="sect">
-            <article class="barra">
-                <section class="barrita">
+            <article class="barra" >
+                <section class="barrita" id="Comida">
                     <h2>Comida</h2>
                 </section>
             </article>
-            <article class="cajas">
-                <div></div>
-                <div></div>
-                <div></div>
+            <article class="cont">
+                <div class="caja"></div>
+                <div class="caja"></div>
+                <div class="caja"></div>
             </article>
         </nav>
         <nav class="sect">
-            <article class="barra">
-                <section class="barrita">
+            <article class="barra" >
+                <section class="barrita" id="Viajes">
                     <h2>Viajes</h2>
                 </section>
             </article>
-            <article class="cajas">
-                <div></div>
-                <div></div>
-                <div></div>
+            <article class="cont">
+                <div class="caja"></div>
+                <div class="caja"></div>
+                <div class="caja"></div>
             </article>
         </nav>
         <nav class="sect">
             <article class="barra">
-                <section class="barrita">
+                <section class="barrita" id="Belleza">
                     <h2>Belleza</h2>
                 </section>
             </article>
-            <article class="cajas">
-                <div></div>
-                <div></div>
-                <div></div>
+            <article class="cont">
+                <div class="caja"></div>
+                <div class="caja"></div>
+                <div class="caja"></div>
             </article>
         </nav>
         <nav class="sect">
             <article class="barra">
-                <section class="barrita">
+                <section class="barrita" id="Salud">
                     <h2>Salud</h2>
                 </section>
             </article>
-            <article class="cajas">
-                <div></div>
-                <div></div>
-                <div></div>
+            <article class="cont">
+                <div class="caja"></div>
+                <div class="caja"></div>
+                <div class="caja"></div>
             </article>
         </nav>
         <nav class="sect">
             <article class="barra">
-                <section class="barrita">
+                <section class="barrita" id="Things">
                     <h2>Things</h2>
                 </section>
             </article>
-            <article class="cajas">
-                <div></div>
-                <div></div>
-                <div></div>
+            <article class="cont">
+                <div class="caja"></div>
+                <div class="caja"></div>
+                <div class="caja"></div>
             </article>
         </nav>
                <nav class="sect">
             <article class="barra">
-                <section class="barrita">
+                <section class="barrita" id="Help">
                     <h2>¿Cómo funciona?</h2>
                 </section>
             </article>
