--- a/Inicio_menu.html
+++ b/Inicio_menu.html
@@ -11,13 +11,13 @@
             <img src="./img/Logo.jpg" alt="Logo" id="logo">
             <div id="menu">
                 <ul id="items">
-                    <li><a href="#">Comida</a></li>
-                    <li><a href="#">Belleza</a></li>
-                    <li><a href="#">Viajes</a></li>
-                    <li><a href="#">Salud</a></li>
-                    <li><a href="#">Things</a></li>
-                    <li><a href="#">Destacados</a></li>
-                    <li><a href="#">¿Cómo funciona?</a></li>
+                    <li><a href="#Comida">Comida</a></li>
+                    <li><a href="#Belleza">Belleza</a></li>
+                    <li><a href="#Viajes">Viajes</a></li>
+                    <li><a href="#Salud">Salud</a></li>
+                    <li><a href="#Things">Things</a></li>
+                    <li><a href="#Help">¿Cómo funciona?</a></li>
+                    <div id="Busqueda"><a href="#">Busqueda</a></div>
                 </ul>
             </div>
     </header>
@@ -30,8 +30,8 @@
             </article>
         </nav>
         <nav class="sect">
-            <article class="barra">
-                <section class="barrita">
+            <article class="barra" >
+                <section class="barrita" id="Comida">
                     <h2>Comida</h2>
                 </section>
             </article>
@@ -42,8 +42,8 @@
             </article>
         </nav>
         <nav class="sect">
-            <article class="barra">
-                <section class="barrita">
+            <article class="barra" >
+                <section class="barrita" id="Viajes">
                     <h2>Viajes</h2>
                 </section>
             </article>
@@ -55,7 +55,7 @@
         </nav>
         <nav class="sect">
             <article class="barra">
-                <section class="barrita">
+                <section class="barrita" id="Belleza">
                     <h2>Belleza</h2>
                 </section>
             </article>
@@ -67,7 +67,7 @@
         </nav>
         <nav class="sect">
             <article class="barra">
-                <section class="barrita">
+                <section class="barrita" id="Salud">
                     <h2>Salud</h2>
                 </section>
             </article>
@@ -79,7 +79,7 @@
         </nav>
         <nav class="sect">
             <article class="barra">
-                <section class="barrita">
+                <section class="barrita" id="Things">
                     <h2>Things</h2>
                 </section>
             </article>
@@ -91,7 +91,7 @@
         </nav>
                <nav class="sect">
             <article class="barra">
-                <section class="barrita">
+                <section class="barrita" id="Help">
                     <h2>¿Cómo funciona?</h2>
                 </section>
             </article>
