--- a/howworks.html
+++ b/howworks.html
@@ -24,7 +24,22 @@
     </header>
     <article>
         <section>
-            <div class=""></div>
+            <div class="">
+                <h2>¿Cómo funciona?</h2>
+                <p>El primer paso para poder disfrutar de los multiples beneficios que ofrece nuestro maravilloso sitio es 
+                <a href="#">Iniciar Sesión</a> sino posees una cuenta, <a href="#">Registrate.</a></p>
+                <p>Lo siguiente es escoger entre los maravillosos descuentos que poseemos, puedes ver los cupones por categoría
+                o ver los cupones más destacados; por lo general las mejores promociones solo están disponibles durante un par de días,
+                luego de la compra dispones de 1 a 6 meses para usar tu cupón.</p>
+                <p>El siguiente paso es comprar tu cupón; no te preocupes, es segura y fácil, ya que contamos con un portal de pagos externo
+                que soporta cualquier tarjeta VISA o MasterCard. Simplemente presiona el botón "Comprar" y serás redirigido(a) para pagar 
+                con tarjeta de débido o crédito. Si deseas pagar mediante transferencia bancaria comunícate a nuestro WhatsApp (7878 8078),
+                nuestros operadores te ayudarán.</p>
+                <p>Después de haberse confirmado el pago por cualquier medio se enviará a tu correo eléctronico y a tu número de contacto
+                el cupón, no es necesario que lo tengas de manera física, con presentar el cupón de manera digital en el establecimiento es 
+                suficiente, así no contaminamos más</p>
+
+            </div>
         </section>
     </article>
 
