--- a/Inicio_menu - copia.html
+++ b/Inicio_menu - copia.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/Intento.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <title>Document</title>
 </head>
 <body>
@@ -11,14 +12,14 @@
             <img src="./img/Logo.jpg" alt="Logo" id="logo">
             <div id="menu">
                 <ul id="items">
-                    <li><img src="./img/iconos/comida.png" alt="Comida" height="20px"><a href="#Comida">Comida</a></li>
-                    <li><img src="./img/iconos/belleza.png" alt="Belleza" height="20px"><a href="#Belleza">Belleza</a></li>
-                    <li><img src="./img/iconos/viajes.png" alt="Viajes" height="20px"><a href="#Viajes">Viajes</a></li>
-                    <li><img src="./img/iconos/salud.png" alt="Salud" height="20px"><a href="#Salud">Salud</a></li>
-                    <li><img src="./img/iconos/things.png" alt="Things" height="20px"><a href="#Things">Things</a></li>
-                    <li><img src="./img/iconos/como-funciona.png" alt="Help" height="20px"><a href="#Help">¿Cómo funciona?</a></li>
-                    <div id="Busqueda"><img src="./img/iconos/lupa.png" alt="Busqueda" height="20px"><a href="#">Busqueda</a></div>
-                    <li><img src="./img/iconos/iniciar-sesion.png" alt="Resgistrarse" height="20px"><a href="#">Resgistrarse</a></li>
+                    <li><i class="fas fa-utensils" id="icons"></i><a href="#Comida">Comida</a></li>
+                    <li><i class="fa-solid fa-spray-can-sparkles" id="icons"></i><a href="#Belleza">Belleza</a></li>
+                    <li><i class="fa-solid fa-car-side" id="icons"></i><a href="#Viajes">Viajes</a></li>
+                    <li><i class="fa-solid fa-stethoscope" id="icons"></i><a href="#Salud">Salud</a></li>
+                    <li><i class="fa-solid fa-gift" id="icons"></i><a href="#Things">Things</a></li>
+                    <li><i class="fa-solid fa-code-compare" id="icons"></i><a href="#Help">¿Cómo funciona?</a></li>
+                    <div id="Busqueda"><i class="fa-solid fa-square-up-right" id="icons"></i><a href="#">Busqueda</a></div>
+                    <li><i class="fa-solid fa-user" id="icons"></i><a href="#">Resgistrarse</a></li>
                 </ul>
             </div>
     </header>
