--- a/cuenta_nueva.html
+++ b/cuenta_nueva.html
@@ -26,32 +26,34 @@
     </header>
     <div class="formulario">
         <div class="head">
-            <h2>Inicio de sesión</h2>
+            <h2>Cuenta nueva</h2>
         </div>
         <div class="logIn">
             <form action="#">
                 <ul>
                     <li>
-                        <span class="inicio"><i class="fa-solid fa-user"></i></span><input 
-                        type="text" required class="text" placeholder="Nombre de Usuario">
+                        <span class="inicio"><i class="fa-solid fa-user"></i></span><input
+                        type="text" required class="text" placeholder="Nombre">
                     </li>
                     <li>
-                        <span class="inicio"><i class="fa-solid fa-key"></i></span><input 
+                        <span class="inicio"><i class="fa-solid fa-user"></i></span><input
+                        type="text" required class="text" placeholder="Apellido">
+                    </li>
+                    <li>
+                        <span class="inicio"><i class="fa-solid fa-envelope"></i></span><input
+                        type="email" required class="text" placeholder="Correo electrónico">
+                    </li>
+                    <li>
+                        <span class="inicio"><i class="fa-solid fa-key"></i></span><input
                         type="password" required class="text" placeholder="Contraseña">
                     </li>
                     <li>
-                        <input type="submit" value="Iniciar sesión" class="boton">
+                        <input type="submit" value="Crear cuenta" class="boton">
                     </li>
                 </ul>
             </form>
+
         </div>
-            <div class="cuenta_nueva">
-                <div class="nueva">
-                    <ul>
-                        <li><a href="cuenta_nueva.html">Crear cuenta nueva</a></li>
-                    </ul>
-                </div>
-            </div>
     </div>
 </body>
 </html>
