--- a/Inicio_menu.html
+++ b/Inicio_menu.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header class="container">
-            <img src="./img/Logo.jpg" alt="Logo" id="logo">
+            <a href="Inicio_menu.html" class="dnl"><img src="./img/Logo.jpg" alt="Logo" id="logo"></a>
             <div id="menu">
                 <ul id="items">
                     <li><a href="#">Comida</a></li>
@@ -96,6 +96,11 @@
                     <h2><a href="howworks.html">¿Cómo funciona?</a></h2>
                 </section>
             </article>
+
+            <form id="buscador" action="buscar.html" method="GET">
+                <input type="text" name="q" placeholder="Buscar...">
+                <button type="submit">Buscar</button>
+            </form>
     </section>
     <footer>
         <h3>Cupon Mania S.A. de C.V.</h3>
