--- a/cuenta_nueva.html
+++ b/cuenta_nueva.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header class="container">
-        <img src="./img/Logo.jpg" alt="Logo" id="logo">
+        <a href="index.html"><img src="./img/Logo.jpg" alt="Logo" id="logo"></a>
         <div id="menu">
             <ul id="items">
                 <li><a href="#">Comida</a></li>
@@ -52,7 +52,6 @@
                     </li>
                 </ul>
             </form>
-
         </div>
     </div>
 </body>
