Intento de menu movil

--- a/Inicio_menu - copia.html
+++ b/Inicio_menu - copia.html
@@ -9,20 +9,25 @@
 </head>
 <body>
     <header class="container">
-            <img src="./img/Logo.jpg" alt="Logo" id="logo">
-            <div id="menu">
-                <ul id="items">
-                    <li><i class="fas fa-utensils" id="icons"></i><a href="#Comida">Comida</a></li>
-                    <li><i class="fa-solid fa-spray-can-sparkles" id="icons"></i><a href="#Belleza">Belleza</a></li>
-                    <li><i class="fa-solid fa-car-side" id="icons"></i><a href="#Viajes">Viajes</a></li>
-                    <li><i class="fa-solid fa-stethoscope" id="icons"></i><a href="#Salud">Salud</a></li>
-                    <li><i class="fa-solid fa-gift" id="icons"></i><a href="#Things">Things</a></li>
-                    <li><i class="fa-solid fa-code-compare" id="icons"></i><a href="#Help">¿Cómo funciona?</a></li>
-                    <div id="Busqueda"><i class="fa-solid fa-square-up-right" id="icons"></i><a href="#">Busqueda</a></div>
-                    <li><i class="fa-solid fa-user" id="icons"></i><a href="#">Resgistrarse</a></li>
-                </ul>
-            </div>
+        <img src="./img/Logo.jpg" alt="Logo" id="logo">
+        <button class="menu-toggle" id="menu-toggle">
+            <i class="fa fa-bars"></i> <!-- Ícono de menú (hamburguesa) -->
+        </button>
+    
+        <div id="menu">
+            <ul id="items">
+                <li><i class="fas fa-utensils" id="icons"></i><a href="#Comida">Comida</a></li>
+                <li><i class="fa-solid fa-spray-can-sparkles" id="icons"></i><a href="#Belleza">Belleza</a></li>
+                <li><i class="fa-solid fa-car-side" id="icons"></i><a href="#Viajes">Viajes</a></li>
+                <li><i class="fa-solid fa-stethoscope" id="icons"></i><a href="#Salud">Salud</a></li>
+                <li><i class="fa-solid fa-gift" id="icons"></i><a href="#Things">Things</a></li>
+                <li><i class="fa-solid fa-code-compare" id="icons"></i><a href="#Help">¿Cómo funciona?</a></li>
+                <div id="Busqueda"><i class="fa-solid fa-square-up-right" id="icons"></i><a href="#">Busqueda</a></div>
+                <li><i class="fa-solid fa-user" id="icons"></i><a href="#">Registrarse</a></li>
+            </ul>
+        </div>
     </header>
+    
     <section>
         <nav class="sect">
             <article class="cont">
