--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header class="container">
-            <a href="index.html" class="dnl"><img src="./img/Logo.jpg" alt="Logo" id="logo"></a>
+            <a href="index.html"><img src="./img/Logo.jpg" alt="Logo" id="logo"></a>
             <div id="menu">
                 <ul id="items">
                     <li><a href="#">Comida</a></li>
