--- a/index.html
+++ b/index.html
@@ -95,12 +95,7 @@
                 <section class="barrita">
                     <h2><a href="howworks.html">¿Cómo funciona?</a></h2>
                 </section>
-            </article>
-
-            <form id="buscador" action="buscar.html" method="GET">
-                <input type="text" name="q" placeholder="Buscar...">
-                <button type="submit">Buscar</button>
-            </form>
+            </article>s
     </section>
     <footer>
         <h3>Cupon Mania S.A. de C.V.</h3>
