--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 <section class="barrita">
                     <h2><a href="howworks.html">¿Cómo funciona?</a></h2>
                 </section>
-            </article>s
+            </article>
     </section>
     <footer>
         <h3>Cupon Mania S.A. de C.V.</h3>
