--- a/howworks.html
+++ b/howworks.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/inicio_style.css">
+    <link rel="stylesheet" href="css/mra.css">
     <link rel="icon" href="img/logo.png" type="image/x-icon">
     <title>Cupon Mania</title>
 </head>
@@ -37,7 +38,7 @@
                 nuestros operadores te ayudarán.</p>
                 <p>Después de haberse confirmado el pago por cualquier medio se enviará a tu correo eléctronico y a tu número de contacto
                 el cupón, no es necesario que lo tengas de manera física, con presentar el cupón de manera digital en el establecimiento es 
-                suficiente, así no contaminamos más</p>
+                suficiente, así no contaminamos más.</p>
             </div>
         </section>
     </article>
