--- a/index.html
+++ b/index.html
@@ -5,17 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/inicio_style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <title>Document</title>
+    <title>Cupon Mania</title>
 </head>
 <body>
     <header class="container">
-        <img src="./img/Logo.jpg" alt="Logo" id="logo">
-        
+        <a href="index.html"><img src="./img/Logo.jpg" alt="Logo" id="logo"></a>       
         <input type="checkbox" id="menu-ham" class="menu-ham-checkbox" />
         <label for="menu-ham" class="menu-ham">
             <i class="fa fa-bars"></i> <!-- Ícono de menú (hamburguesa) -->
         </label>
-
         <nav id="menu">
             <ul id="items">
                 <li><i class="fas fa-utensils" id="icons"></i><a href="#Comida">Comida</a></li>
