--- a/About_us.html
+++ b/About_us.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About us</title>
+    <title>Cupon Mania</title>
     <link href="css/About_us.css" rel="stylesheet"/>
+    <link rel="icon" href="img/logo.png" type="image/x-icon">
 </head>
 <body>
     <header class="container">
