--- a/About_us.html
+++ b/About_us.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header class="container">
-        <img src="./img/Logo.jpg" alt="Logo" id="logo">
+        <a href="index.html"><img src="./img/Logo.jpg" alt="Logo" id="logo"></a>
     </header>
 
     <section class="titulo">
@@ -32,7 +32,7 @@
             </div>
             <div class="box">
                 <img src="img/levi.jpg" alt="levi" />
-                <p class="image-text">Levi Guerra</p> 
+                <p class="image-text">Leví Guerra</p> 
             </div>
         </div>
     </div>
