--- a/index.html
+++ b/index.html
@@ -10,11 +10,7 @@
 </head>
 <body>
     <header class="container">
-        <a href="index.html"><img src="./img/Logo.jpg" alt="Logo" id="logo"></a>       
-        <input type="checkbox" id="menu-ham" class="menu-ham-checkbox" />
-        <label for="menu-ham" class="menu-ham">
-            <i class="fa fa-bars"></i> <!-- Ícono de menú (hamburguesa) -->
-        </label>
+        <a href="index.html"><img src="img/Logo.jpg" alt="Logo" id="logo"></a>       
         <nav id="menu">
             <ul id="items">
                 <li><i class="fas fa-utensils" id="icons"></i><a href="#Comida">Comida</a></li>
