--- a/cuenta_nueva.html
+++ b/cuenta_nueva.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,22 +7,23 @@
     <link rel="stylesheet" href="css/formulario.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="icon" href="img/logo.png" type="image/x-icon">
-    <title>Inicio de sesión</title>
+    <title>Cupon Mania</title>
 </head>
 <body>
     <header class="container">
-        <a href="index.html"><img src="./img/Logo.jpg" alt="Logo" id="logo"></a>
-        <div id="menu">
+        <a href="index.html"><img src="img/Logo.jpg" alt="Logo" id="logo"></a>       
+        <nav id="menu">
             <ul id="items">
-                <li><a href="#">Comida</a></li>
-                <li><a href="#">Belleza</a></li>
-                <li><a href="#">Viajes</a></li>
-                <li><a href="#">Salud</a></li>
-                <li><a href="#">Things</a></li>
-                <li><a href="#">Destacados</a></li>
-                <li><a href="howworks.html">¿Cómo funciona?</a></li>
+                <li><i class="fas fa-utensils" id="icons"></i><a href="#Comida">Comida</a></li>
+                <li><i class="fa-solid fa-spray-can-sparkles" id="icons"></i><a href="#Belleza">Belleza</a></li>
+                <li><i class="fa-solid fa-car-side" id="icons"></i><a href="#Viajes">Viajes</a></li>
+                <li><i class="fa-solid fa-stethoscope" id="icons"></i><a href="#Salud">Salud</a></li>
+                <li><i class="fa-solid fa-gift" id="icons"></i><a href="#Things">Things</a></li>
+                <li><i class="fa-solid fa-code-compare" id="icons"></i><a href="howworks.html">¿Cómo funciona?</a></li>
+                <div id="Busqueda"><i class="fa-solid fa-square-up-right" id="icons"></i><a href="#">Busqueda</a></div>
+                <li><i class="fa-solid fa-user" id="icons"></i><a href="#">Registrarse</a></li>
             </ul>
-        </div>
+        </nav>
     </header>
     <div class="formulario">
         <div class="head">
