--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <li><i class="fa-solid fa-gift" id="icons"></i><a href="#Things">Things</a></li>
                 <li><i class="fa-solid fa-code-compare" id="icons"></i><a href="howworks.html">¿Cómo funciona?</a></li>
                 <div id="Busqueda"><i class="fa-solid fa-square-up-right" id="icons"></i><a href="#">Busqueda</a></div>
-                <li><i class="fa-solid fa-user" id="icons"></i><a href="#">Registrarse</a></li>
+                <li><i class="fa-solid fa-user" id="icons"></i><a href="cuenta_nueva.html">Registrarse</a></li>
             </ul>
         </nav>
     </header>   
