--- a/About_us.html
+++ b/About_us.html
@@ -32,19 +32,19 @@
     <div class="cabeza">
         <div class="imagenes">
             <div class="box">
-                <img src="img/astrid.jpg" alt="astrid" />
+                <img src="img/caras/astrid.jpg" alt="astrid" />
                 <p class="image-text">Astrid Ayala</p> 
             </div>
             <div class="box">
-                <img src="img/ricardo.jpg" alt="ricardo" />
+                <img src="img/caras/ricardo.jpg" alt="ricardo" />
                 <p class="image-text">Ricardo Cubias</p> 
             </div>
             <div class="box">
-                <img src="img/daniela.jpg" alt="daniela" />
+                <img src="img/caras/daniela.jpg" alt="daniela" />
                 <p class="image-text">Daniela Guardado</p> 
             </div>
             <div class="box">
-                <img src="img/levi.jpg" alt="levi" />
+                <img src="img/caras/levi.jpg" alt="levi" />
                 <p class="image-text">Leví Guerra</p> 
             </div>
         </div>
