--- a/cuenta_nueva.html
+++ b/cuenta_nueva.html
@@ -20,6 +20,7 @@
                 <li><i class="fa-solid fa-stethoscope" id="icons"></i><a href="#Salud">Salud</a></li>
                 <li><i class="fa-solid fa-gift" id="icons"></i><a href="#Things">Things</a></li>
                 <li><i class="fa-solid fa-code-compare" id="icons"></i><a href="howworks.html">¿Cómo funciona?</a></li>
+                <li><i class="fa-solid fa-people-group" id="icons"></i><a href="About_us.html">Acerca de</a></li>
                 <div id="Busqueda"><i class="fa-solid fa-square-up-right" id="icons"></i><a href="#">Busqueda</a></div>
                 <li><i class="fa-solid fa-user" id="icons"></i><a href="#">Registrarse</a></li>
             </ul>
