--- a/formulario.html
+++ b/formulario.html
@@ -54,5 +54,8 @@
                 </div>
             </div>
     </div>
+    <footer>
+        <h3>©2024 Cupon Mania S.A. de C.V. Todos los derechos reservados</h3>
+    </footer>
 </body>
 </html>
