--- a/howworks.html
+++ b/howworks.html
@@ -44,6 +44,8 @@
             </div>
         </section>
     </article>
-
+    <footer>
+        <h3>©2024 Cupon Mania S.A. de C.V. Todos los derechos reservados</h3>
+    </footer>
 </body>
 </html>
