--- a/howworks.html
+++ b/howworks.html
@@ -29,6 +29,9 @@
         <section>
             <div class="dnl">
                 <h2>¿Cómo funciona?</h2>
+                <ul>
+                    <li>✔️ El primer paso para poder disfrutar de los multiples beneficios que ofrece nuestro maravilloso sitio es: </li>
+                </ul>
                 <p>El primer paso para poder disfrutar de los multiples beneficios que ofrece nuestro maravilloso sitio es 
                 <a href="formulario.html">Iniciar Sesión</a> sino posees una cuenta, <a href="cuenta_nueva.html">Registrate.</a></p>
                 <p>Lo siguiente es escoger entre los maravillosos descuentos que poseemos, puedes ver los cupones por categoría
