--- a/About_us.html
+++ b/About_us.html
@@ -22,7 +22,7 @@
                 <li><i class="fa-solid fa-code-compare" id="icons"></i><a href="howworks.html">¿Cómo funciona?</a></li>
                 <li><i class="fa-solid fa-people-group" id="icons"></i><a href="About_us.html">Acerca de</a></li>
                 <div id="Busqueda"><i class="fa-solid fa-square-up-right" id="icons"></i><a href="#">Busqueda</a></div>
-                <li><i class="fa-solid fa-user" id="icons"></i><a href="cuenta_nueva.html">Registrarse</a></li>
+                <li><i class="fa-solid fa-user" id="icons"></i><a href="formulario.html">Registrarse</a></li>
             </ul>
         </nav>
     </header> 
