--- a/howworks.html
+++ b/howworks.html
@@ -32,9 +32,8 @@
                 <h2>¿Cómo funciona?</h2>
                 <ul>
                     <li>✔️ El primer paso para poder disfrutar de los multiples beneficios que ofrece nuestro maravilloso sitio es: </li>
+                    <a href="formulario.html">Iniciar Sesión</a> sino posees una cuenta, <a href="cuenta_nueva.html">Registrate.</a>
                 </ul>
-                <p>El primer paso para poder disfrutar de los multiples beneficios que ofrece nuestro maravilloso sitio es 
-                <a href="formulario.html">Iniciar Sesión</a> sino posees una cuenta, <a href="cuenta_nueva.html">Registrate.</a></p>
                 <p>Lo siguiente es escoger entre los maravillosos descuentos que poseemos, puedes ver los cupones por categoría
                 o ver los cupones más destacados; por lo general las mejores promociones solo están disponibles durante un par de días,
                 luego de la compra dispones de 1 a 6 meses para usar tu cupón.</p>
