--- a/cuenta_nueva.html
+++ b/cuenta_nueva.html
@@ -31,7 +31,7 @@
             <h2>Cuenta nueva</h2>
         </div>
         <div class="logIn">
-            <form action="#">
+            <form method="post" action="#">
                 <ul>
                     <li>
                         <span class="inicio"><i class="fa-solid fa-user"></i></span><input
