--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
         <a href="index.html"><img src="img/Logo.jpg" alt="Logo" id="logo"></a>       
         <nav id="menu">
             <ul id="items">
-                <li><i class="fas fa-utensils" id="icons"></i><a href="#Comida">Comida</a></li>
-                <li><i class="fa-solid fa-spray-can-sparkles" id="icons"></i><a href="#Belleza">Belleza</a></li>
-                <li><i class="fa-solid fa-car-side" id="icons"></i><a href="#Viajes">Viajes</a></li>
-                <li><i class="fa-solid fa-stethoscope" id="icons"></i><a href="#Salud">Salud</a></li>
-                <li><i class="fa-solid fa-gift" id="icons"></i><a href="#Things">Things</a></li>
+                <li><i class="fas fa-utensils" id="icons"></i><a href="comida.html">Comida</a></li>
+                <li><i class="fa-solid fa-spray-can-sparkles" id="icons"></i><a href="belleza.html">Belleza</a></li>
+                <li><i class="fa-solid fa-car-side" id="icons"></i><a href="viajes.html">Viajes</a></li>
+                <li><i class="fa-solid fa-stethoscope" id="icons"></i><a href="salud.html">Salud</a></li>
+                <li><i class="fa-solid fa-gift" id="icons"></i><a href="things.html">Things</a></li>
                 <li><i class="fa-solid fa-code-compare" id="icons"></i><a href="howworks.html">¿Cómo funciona?</a></li>
                 <li><i class="fa-solid fa-people-group" id="icons"></i><a href="About_us.html">Acerca de</a></li>
                 <div id="Busqueda"><i class="fa-solid fa-square-up-right" id="icons"></i><a href="#">Busqueda</a></div>
                 <li><i class="fa-solid fa-user" id="icons"></i><a href="formulario.html">Registrarse</a></li>
             </ul>
         </nav>
-    </header>   
+    </header>  
     <section>
         <nav class="sect">
             <article class="cont">
