--- a/comida.html
+++ b/comida.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/inicio_style.css">
-    <link rel="stylesheet" href="css/formulario.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="icon" href="img/logo.png" type="image/x-icon">
-    <title>Inicio de sesión</title>
+    <title>Comida</title>
 </head>
 <body>
     <header class="container">
@@ -25,38 +24,6 @@
                 <li><i class="fa-solid fa-user" id="icons"></i><a href="formulario.html">Registrarse</a></li>
             </ul>
         </nav>
-    </header>
-    <div class="formulario">
-        <div class="head">
-            <h2>Inicio de sesión</h2>
-        </div>
-        <div class="logIn">
-            <form action="#">
-                <ul>
-                    <li>
-                        <span class="inicio"><i class="fa-solid fa-user"></i></span><input 
-                        type="text" required class="text" placeholder="Nombre de Usuario">
-                    </li>
-                    <li>
-                        <span class="inicio"><i class="fa-solid fa-key"></i></span><input 
-                        type="password" required class="text" placeholder="Contraseña">
-                    </li>
-                    <li>
-                        <input type="submit" value="Iniciar sesión" class="boton">
-                    </li>
-                </ul>
-            </form>
-        </div>
-            <div class="cuenta_nueva">
-                <div class="nueva">
-                    <ul>
-                        <li><a href="cuenta_nueva.html">Crear cuenta nueva</a></li>
-                    </ul>
-                </div>
-            </div>
-    </div>
-    <footer>
-        <h3>©2024 Cupon Mania S.A. de C.V. Todos los derechos reservados</h3>
-    </footer>
+    </header> 
 </body>
 </html>
