--- a/howworks.html
+++ b/howworks.html
@@ -20,7 +20,7 @@
                 <li><i class="fa-solid fa-stethoscope" id="icons"></i><a href="salud.html">Salud</a></li>
                 <li><i class="fa-solid fa-gift" id="icons"></i><a href="things.html">Things</a></li>
                 <li><i class="fa-solid fa-code-compare" id="icons"></i><a href="howworks.html">¿Cómo funciona?</a></li>
-                <li><i class="fa-solid fa-people-group" id="icons"></i><a href="About_us.html">Acerca de</a></li>
+                <li><i class="fa-solid fa-people-group" id="icons"></i><a href="About_us.html">Nosotros</a></li>
                 <div id="Busqueda"><i class="fa-solid fa-square-up-right" id="icons"></i><a href="#">Busqueda</a></div>
                 <li><i class="fa-solid fa-user" id="icons"></i><a href="formulario.html">Registrarse</a></li>
             </ul>
