--- a/comida.html
+++ b/comida.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/inicio_style.css">
+    <link rel="stylesheet" href="css/categorias.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="icon" href="img/logo.png" type="image/x-icon">
     <title>Comida</title>
@@ -25,5 +26,29 @@
             </ul>
         </nav>
     </header> 
+    <section>
+        <nav class="sect">
+            <article class="barra" >
+                <section class="barrita" id="Viajes">
+                    <h2>Comida</h2>
+                </section>
+            </article>
+            <article class="cont">
+                <div class="galeria">
+                    <div class="opciones">
+                    <img src="img/comida/hijos-del-chilaquil.jpeg" alt="Hijos del Chilaquil" width="260" height="150">
+                    <p>
+                        <div class="info-cupon">
+                            <img src="img/logos-empresas/hijos-del-chilaquil.png" alt="">
+                        </div>
+                        <p>Combo Hijastros de 4 tacos + Chilaquiles + Torta o Burrito + 2 bebidas por $15.00</p>
+                        <h3>$15</h3>
+                        <h4>38% | Antes $24</h4>
+                    </p>
+                    </div>
+                </div>
+            </article>
+        </nav>
+    </section>
 </body>
 </html>
