--- a/comida.html
+++ b/comida.html
@@ -44,6 +44,7 @@
                         <p>Combo Hijastros de 4 tacos + Chilaquiles + Torta o Burrito + 2 bebidas por $15.00</p>
                         <h3>$15</h3>
                         <h4>38% | Antes $24</h4>
+                        <h5>Finaliza en: <span id="bold">10 días</span></h5>
                     </p>
                     </div>
                 </div>
